--- a/nextjs-client/styles/globals.css
+++ b/nextjs-client/styles/globals.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Hebrew:wght@500;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Hebrew:wght@100;600&family=Secular+One&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -6,6 +7,8 @@
   box-sizing: border-box;
   font-family: 'Noto Sans Hebrew', sans-serif;
 }
+
+
 a{
   text-decoration: none;
   color: inherit;
