--- a/nextjs-client/components/leaderboard/leaderboard.module.css
+++ b/nextjs-client/components/leaderboard/leaderboard.module.css
@@ -11,6 +11,7 @@
 }
 
 .leaderboard_row {
+    font-family: 'Secular One', sans-serif;
     background-color: #c0c0c6;
     padding: .8em 1em;
     display: flex;
@@ -19,6 +20,7 @@
     align-items: center;
     gap: 2em;
     flex-wrap: wrap;
+    border-radius: 5px;
 }
 
 .guide {
@@ -29,13 +31,36 @@
     color: #909094;
 }
 
+.sales {
+    display: none;
+}
+
+.sale_item {
+    background-color: #e3e3e3;
+    padding: .2em;
+    border-radius: 5px;
+    font-size: 1.2em;
+}
+
 @media screen and (min-width: 768px) {
     .sales_list {
         margin: 2em auto;
         width: 70%;
     }
 
-    .leaderboard_row {
-    
+    .leaderboard_row .guide {
+        display: none;
+    }
+
+    .sales {
+        display: block;
+        flex-grow: 4;
+        padding: .4em;
+        border-radius: 10px;
+        border-width: 1px;
+        border-style: solid;
+        /* drop shadow */
+        filter: drop-shadow(1px 1px 2px #333);
+        display: flex;
     }
 }
