--- a/nextjs-client/styles/globals.css
+++ b/nextjs-client/styles/globals.css
@@ -1,30 +1,50 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Hebrew:wght@500;800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Hebrew:wght@100;600&family=Secular+One&display=swap');
+
+
 * {
   margin: 0;
   padding: 0;
   outline: none;
   box-sizing: border-box;
-  font-family: 'Noto Sans Hebrew', sans-serif;
 }
 
+html {
+  font-family: 'Heebo', sans-serif;
+}
 
 a{
   text-decoration: none;
   color: inherit;
 }
+
 header{
   position: sticky;
   z-index: 30;
   top: 0;
 }
 nav{
+  font-family: 'Secular One', sans-serif;
   display: flex;
   padding: 16px;
   justify-content: space-between;
   align-items: center;
   background-color: #f1f1f1;
 }
+
+.title {
+  font-size: 2em;
+  font-weight: 400;
+}
+
+.sub-title {
+  font-size: 1.5em;
+  font-weight: 100;
+}
+
+.page {
+  text-align: center;
+  padding: 2em 0;
+}
+
 .nav__menu-bar{
   display: flex;
   flex-direction: column;
@@ -70,6 +90,15 @@ nav{
   align-items: center;
 }
 @media screen and (min-width: 768px) {
+
+  .title {
+    font-size: 3em;
+  }
+
+  .sub-title {
+    font-size: 2em;
+  }
+
   .nav__menu-bar{
     display: none;
   }
